# HE_Cloud_Frontend

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/he_cloud_frontend/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: file_item.dart  folder_content.dart  folder_item.dart  upload_task.dart
lib/providers/: app_provider.dart
lib/screens/: cloud_browser_screen.dart  create_folder_screen.dart  file_download_screen.dart  file_upload_screen.dart  home_screen.dart  how_it_works_screen.dart  login_screen.dart  main_shell.dart  search_screen.dart  signup_screen.dart
lib/services/: api_service.dart  crypto_manager.dart  dictionary_manager.dart  key_manager.dart  keyword_extractor.dart  text_extractor.dart
lib/theme/: app_theme.dart
lib/widgets/: pattern_background.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/base64/: CMakeLists.txt  base64.cpp  base64.h  seal_wrapper.cpp
native/kiwi/: CMakeLists.txt  native_analyzer.cpp
native/kiwi/Kiwi-main/vsproj/: evaluator.vcxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
